--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
   html {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: #ebd9ff;
   }
   
